# pi5-fan-control

./: .gitignore  README.md  pyproject.toml
src/pi5_fan_control/: __init__.py  control.py
src/pi5_fan_control/examples/: manual_fan_control.py  read_fan_curve.py  read_fan_speed.py  read_temp.py  update_fan_curve.py
tests/: test_control.py  test_package.py
