[project]
name = "pi5-fan-control"
version = "1.0.0"
description = "Control the Raspberry Pi 5's fan curve"
readme = "README.md"
requires-python = ">=3.13"
license={text="MIT"}
authors=[{name="Shashank Prasanna", email="shashankprasanna1@gmail.com"}]
keywords=["raspberry-pi", "fan", "hardware", "config"]
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
